        - MATLAB interface now returns number of function evaluations, too
        - the MA57 interface can now be used with the MA57 library that comes with
          MATLAB (configure option --enable-matlab-ma57; cannot use Metis)
        - auxdata is now handled by a wrapper function ipopt_auxdata.m instead
          of internally within the mex code (replace Matlab call to ipopt with
          ipopt_auxdata if using auxiliary data in any callbacks)
        
        - fixes to JIpopt buildsystem (now may work on windows and uses libtool)
        - JIpopt now reads options file ipopt.opt by default, if present
        - removed predefined KEY_ strings in JIpopt
        - renamed API functions to retrieve solution values in JIpopt
        
        - simplified installation of R interface

2012-05-05 releases/3.10.4
        - fixed sign of dual values in AMPL solution again (with help of Gabe)
          [r2169, r2170, r2184, #183]
        - fixed bugs with reoptimizing a TNLP with all variables fixed [r2172, r2173, #179]
        - fixed more issues with sparse data structures and non-double numbers
          in Matlab interface (by T. Kelman) [r2191]
        - added missing final int for Ipopt return code Maximum_CpuTime_Exceeded
          in Java interface [r2216]
        - fixed bug when trying to warmstart Ipopt in Java interface [r2253]
        - fixed wrong use of SmartPtr's in Java interface [r2255, r2263]
        - fixed bug in returning final solution in Java interface [r2258]
        - included patch in ThirdParty/Mumps to work around bugs in Mumps
          matrix ordering routines AMF and QAMD (now give preference to AMD and METIS)

2012-11-19 releases/3.10.3
        - minor fixes in MA86 interface (by Jonathan Hogg) [r2069, r2086]
        - fix in IpTripletToCSRConverter for CSR forms with
          extra entries (by Jonathan Hogg) [r2087]
        - workaround problems with MacOSX-Lion's blas library
          (by Frederic Hetch) [r2102, #181]